QPID-3197: prevent threads from scheduling async completions when session is detached.

git-svn-id: https://svn.apache.org/repos/asf/qpid/branches/0.10@1091560 13f79535-47bb-0310-9956-ffa450edef68